# Taller2-corte1-Vision

./: CMakeLists.txt  README.md  punto1.cpp  punto2.cpp  punto3.cpp  punto4.cpp  punto5.cpp  punto6.cpp  punto7.cpp
Debug/: CMakeCache.txt  Makefile  Taller1Vision  Taller1Vision.cbp  cmake_install.cmake
